--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         display: none;
     }
 </style>
+<link rel="stylesheet" type="text/css" href="styles/index.css">
 
 <body onload="start()" style="background-color: black">
     <div style="display: flex; justify-content:center; align-items: center; visibility: hidden;" id="pausePopup">
@@ -57,6 +58,16 @@
         <font color="yellow">Score:
             <span id="score">0</span>
         </font>
+        
+        <!-- add modal button -->
+        <a href="#openModal">Open Modal</a>
+        <div id="openModal" class="modalDialog">
+          <div>
+            <a href="close" title="Close" class="close">X</a>
+            <h2>Modal Box</h2>
+          </div>
+        </div>
+        
     </left>
     <audio id="myAudio">
         <source src="sound/benny.mp3" type="audio/mpeg"> Your browser does not support the audio element.
