bug: closing the modal popup for the leaderboard pauses the game only once after clicking the button again the modal gets stuck and the game continues, need to close the modal box and return to current game state

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <font color="yellow">Score:
             <span id="score">0</span>
         </font>
-        
+
         <!-- add modal button -->
         <a href="#openModal">Open Modal</a>
         <div id="openModal" class="modalDialog">
           <div>
-            <a href="close" title="Close" class="close">X</a>
+            <button href="close" title="Close" class="close" onclick="pauser()">X</button>
             <h2>Modal Box</h2>
           </div>
         </div>
-        
+
     </left>
     <audio id="myAudio">
         <source src="sound/benny.mp3" type="audio/mpeg"> Your browser does not support the audio element.
