feat: Add functions for pausing leader and added functions to html for leaderboard modal

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </font>
 
         <!-- add modal button -->
-        <a href="#openModal">Open Modal</a>
+        <a href="#openModal" onclick="pauser">Open Modal</a>
         <div id="openModal" class="modalDialog">
           <div>
-            <button href="close" title="Close" class="close" onclick="pauser()">X</button>
+            <button href="close" title="Close" class="close" onclick="unPauser()">X</button>
             <h2>Modal Box</h2>
           </div>
         </div>
